--- a/tss_styles.css
+++ b/tss_styles.css
@@ -1,9 +1,9 @@
 @charset "utf-8";
 
 @font-face {
-    font-family: quicksand;
-    src: url('Quicksand-Regular.woff') format('woff');
-    url('Quicksand-Regular.tff') format('truetype');
+    font-family: Quicksand;
+    src: url('Quicksand-Regular.woff') format('woff'),
+        url('Quicksand-Regular.tff') format('truetype');
 }
 
 /* @import url('https://fonts.googleapis.com/css?family=Roboto'); */
@@ -19,6 +19,9 @@
    Filename: tss_styles.css
 
 */
+/* * {
+    border: 1px solid red;
+} */
 /* HTML and Body Styles */
 html {
     background-color: hsl(27, 72%, 72%);
@@ -27,19 +30,28 @@ html {
 body {
     color: rgb(91, 91, 91);
     background-color: ivory;
-    /* font-family: Verdana, Geneva, Tahoma, sans-serif; */
-    /* font-family: 'Roboto', sans-serif; */
+    font-family: Verdana, Geneva, sans-serif;
+    /* font-family: 'Roboto' sans-serif; */
 }
 
 /* Heading Styles */
+h1 {
+    font-size: 2.23em;
+}
+
+h2 {
+    font-size: 1.5em;
+}
+
 h1,
 h2 {
     font-family: Quicksand, Verdana, Geneva, sans-serif;
+    letter-spacing: 0.1em;
 }
 
 article#about_tss h1 {
     color: white;
-    background-color: rgb(222, 128, 60);
+    background-color: rgb(222, 128, 68);
 }
 
 article#about_tss h2 {
@@ -50,17 +62,55 @@ article#about_tss h2 {
 article.syllabus h1,
 article.syllabus h2 {
     background-color: rgb(255, 185, 255);
-    color: rgb(101, 101, 101)
+    color: rgb(101, 101, 101);
 }
 
 /* Aside and Blockquote Styles */
+aside {
+    font-size: 0.8em;
+}
+
 aside blockquote {
-    color: rgb(232, 165, 116);
+    color: rgb(232, 165, 116)
 }
 
 /* Navigation Styles */
+nav {
+    font-size: 0.8em;
+}
+
+nav>ul {
+    line-height: 2em;
+    list-style-type: none;
+    padding: 5px;
+}
+
 /* List Styles */
+article#about_tss ul {
+    list-style-image: url('runicon.png');
+}
+
+article.syllabus ol {
+    list-style-type: upper-roman;
+}
+
+article.syllabus ol ol {
+    list-style-type: upper-alpha;
+}
+
+article.syllabus ol ol ol {
+    list-style-type: decimal;
+}
+
 /* Footer Styles */
+body>footer address {
+    background-color: rgb(222, 128, 60);
+    color: white;
+    color: rgba(255, 255, 255, 0.7);
+    font: normal small-caps bold 0.9em/3em Quicksand, Verdana, Geneva, sans-serif;
+    text-align: center;
+}
+
 /*
 Notice for the Quicksand-Regular Font
 ------------------------------------------------------------------------------
